--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -1,3 +1,2 @@
 baseUrl = https://api.todoist.com/rest/v1
-test_user = paultest31313232@gmail.com
-test_user_password = paulpetrovich123
+authorizationBearer = d13db9a760dfe186d8c1363dcb9c9ab68e882dbc 
